--- a/Project/WanderSync/app/src/main/res/layout/fragment_accomodation.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_accomodation.xml
@@ -16,11 +16,57 @@
         android:background="@android:color/background_dark"
         app:layout_constraintTop_toTopOf="parent"
         android:text="Accommodations" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="56dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:id="@+id/tripSelectLayout"
+            android:background="@android:color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" >
+
+            <TextView
+                android:id="@+id/Label"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:text="Trip Select:" />
+
+            <Button
+                android:id="@+id/switchTripLeft"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:padding="0dp"
+                android:layout_marginHorizontal="5dp"
+                android:text="◀" />
+
+            <Button
+                android:id="@+id/switchTripRight"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:padding="0dp"
+                android:layout_marginHorizontal="5dp"
+                android:text="▶" />
+
+            <Button
+                android:id="@+id/addTrip"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:padding="0dp"
+                android:layout_marginHorizontal="5dp"
+                android:text="+" />
+        </LinearLayout>
 
 
         <androidx.core.widget.NestedScrollView
@@ -28,7 +74,7 @@
             android:layout_height="598dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/tripSelectLayout">
 
             <LinearLayout
                 android:layout_width="match_parent"
