--- a/Project/WanderSync/app/src/main/res/layout/fragment_dining.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_dining.xml
@@ -9,13 +9,63 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="56dp"
+        android:background="@android:color/background_dark"
+        android:gravity="center"
+        android:text="Dining Establishments"
+        android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@android:color/white"
+        android:layout_gravity="top" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="56dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
         android:gravity="center"
-        android:background="@android:color/background_dark"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="Dining Establishments" />
+        android:orientation="horizontal"
+        android:id="@+id/tripSelectLayout"
+        android:background="@android:color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <TextView
+            android:id="@+id/Label"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:text="Trip Select:" />
+
+        <Button
+            android:id="@+id/switchTripLeft"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:layout_marginHorizontal="5dp"
+            android:text="◀" />
+
+        <Button
+            android:id="@+id/switchTripRight"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:layout_marginHorizontal="5dp"
+            android:text="▶" />
+
+        <Button
+            android:id="@+id/addTrip"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:padding="0dp"
+            android:layout_marginHorizontal="5dp"
+            android:text="+" />
+    </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -23,7 +73,7 @@
         android:layout_marginTop="55dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/tripSelectLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,10 +121,6 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="56dp">
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
